--- a/.classpath
+++ b/.classpath
@@ -15,42 +15,89 @@
 	<classpathentry kind="lib" path="ext/log4j-1.2.17.jar" sourcepath="ext/src/log4j-1.2.17.jar" />
 	<classpathentry kind="lib" path="ext/slf4j-api-1.7.12.jar" sourcepath="ext/src/slf4j-api-1.7.12.jar" />
 	<classpathentry kind="lib" path="ext/slf4j-log4j12-1.7.12.jar" sourcepath="ext/src/slf4j-log4j12-1.7.12.jar" />
-	<classpathentry kind="lib" path="ext/javax.mail-1.5.1.jar" sourcepath="ext/src/javax.mail-1.5.1.jar" />
+	<classpathentry kind="lib" path="ext/javax.mail-1.6.1.jar" sourcepath="ext/src/javax.mail-1.6.1.jar" />
+	<classpathentry kind="lib" path="ext/activation-1.1.jar" sourcepath="ext/src/activation-1.1.jar" />
 	<classpathentry kind="lib" path="ext/javax.servlet-api-3.1.0.jar" sourcepath="ext/src/javax.servlet-api-3.1.0.jar" />
 	<classpathentry kind="lib" path="ext/jetty-all-9.2.13.v20150730.jar" sourcepath="ext/src/jetty-all-9.2.13.v20150730.jar" />
-	<classpathentry kind="lib" path="ext/wicket-1.4.22.jar" sourcepath="ext/src/wicket-1.4.22.jar" />
-	<classpathentry kind="lib" path="ext/wicket-auth-roles-1.4.22.jar" sourcepath="ext/src/wicket-auth-roles-1.4.22.jar" />
-	<classpathentry kind="lib" path="ext/wicket-extensions-1.4.22.jar" sourcepath="ext/src/wicket-extensions-1.4.22.jar" />
-	<classpathentry kind="lib" path="ext/lucene-core-5.5.2.jar" sourcepath="ext/src/lucene-core-5.5.2.jar" />
-	<classpathentry kind="lib" path="ext/lucene-analyzers-common-5.5.2.jar" sourcepath="ext/src/lucene-analyzers-common-5.5.2.jar" />
-	<classpathentry kind="lib" path="ext/lucene-highlighter-5.5.2.jar" sourcepath="ext/src/lucene-highlighter-5.5.2.jar" />
-	<classpathentry kind="lib" path="ext/lucene-memory-5.5.2.jar" sourcepath="ext/src/lucene-memory-5.5.2.jar" />
-	<classpathentry kind="lib" path="ext/lucene-queries-5.5.2.jar" sourcepath="ext/src/lucene-queries-5.5.2.jar" />
-	<classpathentry kind="lib" path="ext/lucene-queryparser-5.5.2.jar" sourcepath="ext/src/lucene-queryparser-5.5.2.jar" />
-	<classpathentry kind="lib" path="ext/lucene-sandbox-5.5.2.jar" sourcepath="ext/src/lucene-sandbox-5.5.2.jar" />
+	<classpathentry kind="lib" path="ext/wicket-1.4.23.jar" sourcepath="ext/src/wicket-1.4.23.jar" />
+	<classpathentry kind="lib" path="ext/wicket-auth-roles-1.4.23.jar" sourcepath="ext/src/wicket-auth-roles-1.4.23.jar" />
+	<classpathentry kind="lib" path="ext/wicket-extensions-1.4.23.jar" sourcepath="ext/src/wicket-extensions-1.4.23.jar" />
+	<classpathentry kind="lib" path="ext/lucene-core-5.5.4.jar" sourcepath="ext/src/lucene-core-5.5.4.jar" />
+	<classpathentry kind="lib" path="ext/lucene-analyzers-common-5.5.4.jar" sourcepath="ext/src/lucene-analyzers-common-5.5.4.jar" />
+	<classpathentry kind="lib" path="ext/lucene-highlighter-5.5.4.jar" sourcepath="ext/src/lucene-highlighter-5.5.4.jar" />
+	<classpathentry kind="lib" path="ext/lucene-memory-5.5.4.jar" sourcepath="ext/src/lucene-memory-5.5.4.jar" />
+	<classpathentry kind="lib" path="ext/lucene-queries-5.5.4.jar" sourcepath="ext/src/lucene-queries-5.5.4.jar" />
+	<classpathentry kind="lib" path="ext/lucene-queryparser-5.5.4.jar" sourcepath="ext/src/lucene-queryparser-5.5.4.jar" />
+	<classpathentry kind="lib" path="ext/lucene-sandbox-5.5.4.jar" sourcepath="ext/src/lucene-sandbox-5.5.4.jar" />
 	<classpathentry kind="lib" path="ext/jakarta-regexp-1.4.jar" />
-	<classpathentry kind="lib" path="ext/pegdown-1.5.0.jar" sourcepath="ext/src/pegdown-1.5.0.jar" />
-	<classpathentry kind="lib" path="ext/parboiled-java-1.1.7.jar" sourcepath="ext/src/parboiled-java-1.1.7.jar" />
-	<classpathentry kind="lib" path="ext/parboiled-core-1.1.7.jar" sourcepath="ext/src/parboiled-core-1.1.7.jar" />
-	<classpathentry kind="lib" path="ext/asm-5.0.3.jar" sourcepath="ext/src/asm-5.0.3.jar" />
-	<classpathentry kind="lib" path="ext/asm-tree-5.0.3.jar" sourcepath="ext/src/asm-tree-5.0.3.jar" />
-	<classpathentry kind="lib" path="ext/asm-analysis-5.0.3.jar" sourcepath="ext/src/asm-analysis-5.0.3.jar" />
-	<classpathentry kind="lib" path="ext/asm-util-5.0.3.jar" sourcepath="ext/src/asm-util-5.0.3.jar" />
+	<classpathentry kind="lib" path="ext/flexmark-all-0.34.48.jar" />
+	<classpathentry kind="lib" path="ext/flexmark-0.34.48.jar" sourcepath="ext/src/flexmark-0.34.48.jar" />
+	<classpathentry kind="lib" path="ext/flexmark-util-0.34.48.jar" sourcepath="ext/src/flexmark-util-0.34.48.jar" />
+	<classpathentry kind="lib" path="ext/flexmark-ext-abbreviation-0.34.48.jar" sourcepath="ext/src/flexmark-ext-abbreviation-0.34.48.jar" />
+	<classpathentry kind="lib" path="ext/flexmark-ext-autolink-0.34.48.jar" sourcepath="ext/src/flexmark-ext-autolink-0.34.48.jar" />
+	<classpathentry kind="lib" path="ext/autolink-0.9.0.jar" sourcepath="ext/src/autolink-0.9.0.jar" />
+	<classpathentry kind="lib" path="ext/flexmark-formatter-0.34.48.jar" sourcepath="ext/src/flexmark-formatter-0.34.48.jar" />
+	<classpathentry kind="lib" path="ext/flexmark-ext-typographic-0.34.48.jar" sourcepath="ext/src/flexmark-ext-typographic-0.34.48.jar" />
+	<classpathentry kind="lib" path="ext/flexmark-ext-ins-0.34.48.jar" sourcepath="ext/src/flexmark-ext-ins-0.34.48.jar" />
+	<classpathentry kind="lib" path="ext/flexmark-ext-gfm-strikethrough-0.34.48.jar" sourcepath="ext/src/flexmark-ext-gfm-strikethrough-0.34.48.jar" />
+	<classpathentry kind="lib" path="ext/flexmark-ext-superscript-0.34.48.jar" sourcepath="ext/src/flexmark-ext-superscript-0.34.48.jar" />
+	<classpathentry kind="lib" path="ext/flexmark-ext-admonition-0.34.48.jar" sourcepath="ext/src/flexmark-ext-admonition-0.34.48.jar" />
+	<classpathentry kind="lib" path="ext/flexmark-ext-anchorlink-0.34.48.jar" sourcepath="ext/src/flexmark-ext-anchorlink-0.34.48.jar" />
+	<classpathentry kind="lib" path="ext/flexmark-ext-aside-0.34.48.jar" sourcepath="ext/src/flexmark-ext-aside-0.34.48.jar" />
+	<classpathentry kind="lib" path="ext/flexmark-jira-converter-0.34.48.jar" sourcepath="ext/src/flexmark-jira-converter-0.34.48.jar" />
+	<classpathentry kind="lib" path="ext/flexmark-ext-tables-0.34.48.jar" sourcepath="ext/src/flexmark-ext-tables-0.34.48.jar" />
+	<classpathentry kind="lib" path="ext/flexmark-ext-wikilink-0.34.48.jar" sourcepath="ext/src/flexmark-ext-wikilink-0.34.48.jar" />
+	<classpathentry kind="lib" path="ext/flexmark-ext-attributes-0.34.48.jar" sourcepath="ext/src/flexmark-ext-attributes-0.34.48.jar" />
+	<classpathentry kind="lib" path="ext/flexmark-ext-definition-0.34.48.jar" sourcepath="ext/src/flexmark-ext-definition-0.34.48.jar" />
+	<classpathentry kind="lib" path="ext/flexmark-ext-emoji-0.34.48.jar" sourcepath="ext/src/flexmark-ext-emoji-0.34.48.jar" />
+	<classpathentry kind="lib" path="ext/flexmark-ext-enumerated-reference-0.34.48.jar" sourcepath="ext/src/flexmark-ext-enumerated-reference-0.34.48.jar" />
+	<classpathentry kind="lib" path="ext/flexmark-ext-escaped-character-0.34.48.jar" sourcepath="ext/src/flexmark-ext-escaped-character-0.34.48.jar" />
+	<classpathentry kind="lib" path="ext/flexmark-ext-footnotes-0.34.48.jar" sourcepath="ext/src/flexmark-ext-footnotes-0.34.48.jar" />
+	<classpathentry kind="lib" path="ext/flexmark-ext-gfm-issues-0.34.48.jar" sourcepath="ext/src/flexmark-ext-gfm-issues-0.34.48.jar" />
+	<classpathentry kind="lib" path="ext/flexmark-ext-gfm-tables-0.34.48.jar" sourcepath="ext/src/flexmark-ext-gfm-tables-0.34.48.jar" />
+	<classpathentry kind="lib" path="ext/flexmark-ext-gfm-tasklist-0.34.48.jar" sourcepath="ext/src/flexmark-ext-gfm-tasklist-0.34.48.jar" />
+	<classpathentry kind="lib" path="ext/flexmark-ext-gfm-users-0.34.48.jar" sourcepath="ext/src/flexmark-ext-gfm-users-0.34.48.jar" />
+	<classpathentry kind="lib" path="ext/flexmark-ext-gitlab-0.34.48.jar" sourcepath="ext/src/flexmark-ext-gitlab-0.34.48.jar" />
+	<classpathentry kind="lib" path="ext/flexmark-ext-jekyll-front-matter-0.34.48.jar" sourcepath="ext/src/flexmark-ext-jekyll-front-matter-0.34.48.jar" />
+	<classpathentry kind="lib" path="ext/flexmark-ext-yaml-front-matter-0.34.48.jar" sourcepath="ext/src/flexmark-ext-yaml-front-matter-0.34.48.jar" />
+	<classpathentry kind="lib" path="ext/flexmark-ext-jekyll-tag-0.34.48.jar" sourcepath="ext/src/flexmark-ext-jekyll-tag-0.34.48.jar" />
+	<classpathentry kind="lib" path="ext/flexmark-ext-media-tags-0.34.48.jar" sourcepath="ext/src/flexmark-ext-media-tags-0.34.48.jar" />
+	<classpathentry kind="lib" path="ext/flexmark-test-util-0.34.48.jar" sourcepath="ext/src/flexmark-test-util-0.34.48.jar" />
+	<classpathentry kind="lib" path="ext/junit-4.12.jar" sourcepath="ext/src/junit-4.12.jar" />
+	<classpathentry kind="lib" path="ext/hamcrest-core-1.3.jar" sourcepath="ext/src/hamcrest-core-1.3.jar" />
+	<classpathentry kind="lib" path="ext/flexmark-ext-macros-0.34.48.jar" sourcepath="ext/src/flexmark-ext-macros-0.34.48.jar" />
+	<classpathentry kind="lib" path="ext/flexmark-ext-xwiki-macros-0.34.48.jar" sourcepath="ext/src/flexmark-ext-xwiki-macros-0.34.48.jar" />
+	<classpathentry kind="lib" path="ext/flexmark-ext-toc-0.34.48.jar" sourcepath="ext/src/flexmark-ext-toc-0.34.48.jar" />
+	<classpathentry kind="lib" path="ext/flexmark-ext-youtube-embedded-0.34.48.jar" sourcepath="ext/src/flexmark-ext-youtube-embedded-0.34.48.jar" />
+	<classpathentry kind="lib" path="ext/flexmark-html-parser-0.34.48.jar" sourcepath="ext/src/flexmark-html-parser-0.34.48.jar" />
+	<classpathentry kind="lib" path="ext/jsoup-1.7.3.jar" sourcepath="ext/src/jsoup-1.7.3.jar" />
+	<classpathentry kind="lib" path="ext/flexmark-pdf-converter-0.34.48.jar" sourcepath="ext/src/flexmark-pdf-converter-0.34.48.jar" />
+	<classpathentry kind="lib" path="ext/openhtmltopdf-core-0.0.1-RC13.jar" sourcepath="ext/src/openhtmltopdf-core-0.0.1-RC13.jar" />
+	<classpathentry kind="lib" path="ext/openhtmltopdf-pdfbox-0.0.1-RC13.jar" sourcepath="ext/src/openhtmltopdf-pdfbox-0.0.1-RC13.jar" />
+	<classpathentry kind="lib" path="ext/pdfbox-2.0.8.jar" sourcepath="ext/src/pdfbox-2.0.8.jar" />
+	<classpathentry kind="lib" path="ext/fontbox-2.0.8.jar" sourcepath="ext/src/fontbox-2.0.8.jar" />
+	<classpathentry kind="lib" path="ext/commons-logging-1.2.jar" sourcepath="ext/src/commons-logging-1.2.jar" />
+	<classpathentry kind="lib" path="ext/xmpbox-2.0.8.jar" sourcepath="ext/src/xmpbox-2.0.8.jar" />
+	<classpathentry kind="lib" path="ext/graphics2d-0.12.jar" sourcepath="ext/src/graphics2d-0.12.jar" />
+	<classpathentry kind="lib" path="ext/openhtmltopdf-rtl-support-0.0.1-RC13.jar" sourcepath="ext/src/openhtmltopdf-rtl-support-0.0.1-RC13.jar" />
+	<classpathentry kind="lib" path="ext/icu4j-59.1.jar" sourcepath="ext/src/icu4j-59.1.jar" />
+	<classpathentry kind="lib" path="ext/openhtmltopdf-jsoup-dom-converter-0.0.1-RC13.jar" sourcepath="ext/src/openhtmltopdf-jsoup-dom-converter-0.0.1-RC13.jar" />
+	<classpathentry kind="lib" path="ext/flexmark-profile-pegdown-0.34.48.jar" sourcepath="ext/src/flexmark-profile-pegdown-0.34.48.jar" />
+	<classpathentry kind="lib" path="ext/flexmark-youtrack-converter-0.34.48.jar" sourcepath="ext/src/flexmark-youtrack-converter-0.34.48.jar" />
 	<classpathentry kind="lib" path="ext/wikitext-core-1.4.jar" sourcepath="ext/src/wikitext-core-1.4.jar" />
 	<classpathentry kind="lib" path="ext/twiki-core-1.4.jar" sourcepath="ext/src/twiki-core-1.4.jar" />
 	<classpathentry kind="lib" path="ext/textile-core-1.4.jar" sourcepath="ext/src/textile-core-1.4.jar" />
 	<classpathentry kind="lib" path="ext/tracwiki-core-1.4.jar" sourcepath="ext/src/tracwiki-core-1.4.jar" />
 	<classpathentry kind="lib" path="ext/mediawiki-core-1.4.jar" sourcepath="ext/src/mediawiki-core-1.4.jar" />
 	<classpathentry kind="lib" path="ext/confluence-core-1.4.jar" sourcepath="ext/src/confluence-core-1.4.jar" />
-	<classpathentry kind="lib" path="ext/org.eclipse.jgit-4.1.1.201511131810-r.jar" sourcepath="ext/src/org.eclipse.jgit-4.1.1.201511131810-r.jar" />
-	<classpathentry kind="lib" path="ext/jsch-0.1.53.jar" sourcepath="ext/src/jsch-0.1.53.jar" />
-	<classpathentry kind="lib" path="ext/JavaEWAH-0.7.9.jar" sourcepath="ext/src/JavaEWAH-0.7.9.jar" />
-	<classpathentry kind="lib" path="ext/httpclient-4.3.6.jar" sourcepath="ext/src/httpclient-4.3.6.jar" />
-	<classpathentry kind="lib" path="ext/httpcore-4.3.3.jar" sourcepath="ext/src/httpcore-4.3.3.jar" />
-	<classpathentry kind="lib" path="ext/commons-logging-1.1.3.jar" sourcepath="ext/src/commons-logging-1.1.3.jar" />
-	<classpathentry kind="lib" path="ext/commons-codec-1.7.jar" sourcepath="ext/src/commons-codec-1.7.jar" />
-	<classpathentry kind="lib" path="ext/org.eclipse.jdt.annotation-1.1.0.jar" sourcepath="ext/src/org.eclipse.jdt.annotation-1.1.0.jar" />
-	<classpathentry kind="lib" path="ext/org.eclipse.jgit.http.server-4.1.1.201511131810-r.jar" sourcepath="ext/src/org.eclipse.jgit.http.server-4.1.1.201511131810-r.jar" />
+	<classpathentry kind="lib" path="ext/org.eclipse.jgit-5.0.2.201807311906-r.jar" sourcepath="ext/src/org.eclipse.jgit-5.0.2.201807311906-r.jar" />
+	<classpathentry kind="lib" path="ext/jsch-0.1.54.jar" sourcepath="ext/src/jsch-0.1.54.jar" />
+	<classpathentry kind="lib" path="ext/jzlib-1.1.1.jar" sourcepath="ext/src/jzlib-1.1.1.jar" />
+	<classpathentry kind="lib" path="ext/JavaEWAH-1.1.6.jar" sourcepath="ext/src/JavaEWAH-1.1.6.jar" />
+	<classpathentry kind="lib" path="ext/httpclient-4.5.2.jar" sourcepath="ext/src/httpclient-4.5.2.jar" />
+	<classpathentry kind="lib" path="ext/httpcore-4.4.4.jar" sourcepath="ext/src/httpcore-4.4.4.jar" />
+	<classpathentry kind="lib" path="ext/commons-codec-1.8.jar" sourcepath="ext/src/commons-codec-1.8.jar" />
+	<classpathentry kind="lib" path="ext/org.eclipse.jgit.http.server-5.0.2.201807311906-r.jar" sourcepath="ext/src/org.eclipse.jgit.http.server-5.0.2.201807311906-r.jar" />
 	<classpathentry kind="lib" path="ext/bcprov-jdk15on-1.52.jar" sourcepath="ext/src/bcprov-jdk15on-1.52.jar" />
 	<classpathentry kind="lib" path="ext/bcmail-jdk15on-1.52.jar" sourcepath="ext/src/bcmail-jdk15on-1.52.jar" />
 	<classpathentry kind="lib" path="ext/bcpkix-jdk15on-1.52.jar" sourcepath="ext/src/bcpkix-jdk15on-1.52.jar" />
@@ -63,9 +110,9 @@
 	<classpathentry kind="lib" path="ext/unboundid-ldapsdk-2.3.8.jar" sourcepath="ext/src/unboundid-ldapsdk-2.3.8.jar" />
 	<classpathentry kind="lib" path="ext/ivy-2.2.0.jar" sourcepath="ext/src/ivy-2.2.0.jar" />
 	<classpathentry kind="lib" path="ext/jcalendar-1.3.2.jar" />
-	<classpathentry kind="lib" path="ext/commons-compress-1.4.1.jar" sourcepath="ext/src/commons-compress-1.4.1.jar" />
-	<classpathentry kind="lib" path="ext/xz-1.0.jar" sourcepath="ext/src/xz-1.0.jar" />
-	<classpathentry kind="lib" path="ext/commons-io-2.2.jar" sourcepath="ext/src/commons-io-2.2.jar" />
+	<classpathentry kind="lib" path="ext/commons-compress-1.8.jar" sourcepath="ext/src/commons-compress-1.8.jar" />
+	<classpathentry kind="lib" path="ext/xz-1.5.jar" sourcepath="ext/src/xz-1.5.jar" />
+	<classpathentry kind="lib" path="ext/commons-io-2.5.jar" sourcepath="ext/src/commons-io-2.5.jar" />
 	<classpathentry kind="lib" path="ext/force-partner-api-24.0.0.jar" sourcepath="ext/src/force-partner-api-24.0.0.jar" />
 	<classpathentry kind="lib" path="ext/force-wsc-24.0.0.jar" sourcepath="ext/src/force-wsc-24.0.0.jar" />
 	<classpathentry kind="lib" path="ext/js-1.7R2.jar" sourcepath="ext/src/js-1.7R2.jar" />
@@ -79,9 +126,6 @@
 	<classpathentry kind="lib" path="ext/commons-pool2-2.0.jar" sourcepath="ext/src/commons-pool2-2.0.jar" />
 	<classpathentry kind="lib" path="ext/pf4j-0.9.0.jar" sourcepath="ext/src/pf4j-0.9.0.jar" />
 	<classpathentry kind="lib" path="ext/tika-core-1.5.jar" sourcepath="ext/src/tika-core-1.5.jar" />
-	<classpathentry kind="lib" path="ext/jsoup-1.7.3.jar" sourcepath="ext/src/jsoup-1.7.3.jar" />
-	<classpathentry kind="lib" path="ext/junit-4.12.jar" sourcepath="ext/src/junit-4.12.jar" />
-	<classpathentry kind="lib" path="ext/hamcrest-core-1.3.jar" sourcepath="ext/src/hamcrest-core-1.3.jar" />
 	<classpathentry kind="lib" path="ext/selenium-java-2.28.0.jar" sourcepath="ext/src/selenium-java-2.28.0.jar" />
 	<classpathentry kind="lib" path="ext/selenium-support-2.28.0.jar" sourcepath="ext/src/selenium-support-2.28.0.jar" />
 	<classpathentry kind="lib" path="ext/selenium-firefox-driver-2.28.0.jar" sourcepath="ext/src/selenium-firefox-driver-2.28.0.jar" />
