--- a/.classpath
+++ b/.classpath
@@ -6,15 +6,16 @@
 	<classpathentry kind="src" path="src/test/bugtraq" output="bin/test-classes" />
 	<classpathentry kind="src" path="src/main/resources" />
 	<classpathentry kind="src" path="src/test/resources" output="bin/test-classes" />
-	<classpathentry kind="lib" path="ext/guice-4.0.jar" sourcepath="ext/src/guice-4.0.jar" />
+	<classpathentry kind="lib" path="ext/guice-4.2.1.jar" sourcepath="ext/src/guice-4.2.1.jar" />
 	<classpathentry kind="lib" path="ext/javax.inject-1.jar" sourcepath="ext/src/javax.inject-1.jar" />
 	<classpathentry kind="lib" path="ext/aopalliance-1.0.jar" sourcepath="ext/src/aopalliance-1.0.jar" />
 	<classpathentry kind="lib" path="ext/guava-23.1-jre.jar" sourcepath="ext/src/guava-23.1-jre.jar" />
-	<classpathentry kind="lib" path="ext/guice-servlet-4.0-gb2.jar" sourcepath="ext/src/guice-servlet-4.0-gb2.jar" />
 	<classpathentry kind="lib" path="ext/jsr305-1.3.9.jar" />
+	<classpathentry kind="lib" path="ext/checker-compat-qual-2.0.0.jar" sourcepath="ext/src/checker-compat-qual-2.0.0.jar" />
 	<classpathentry kind="lib" path="ext/error_prone_annotations-2.0.18.jar" sourcepath="ext/src/error_prone_annotations-2.0.18.jar" />
 	<classpathentry kind="lib" path="ext/j2objc-annotations-1.1.jar" sourcepath="ext/src/j2objc-annotations-1.1.jar" />
 	<classpathentry kind="lib" path="ext/animal-sniffer-annotations-1.14.jar" sourcepath="ext/src/animal-sniffer-annotations-1.14.jar" />
+	<classpathentry kind="lib" path="ext/guice-servlet-4.2.1.jar" sourcepath="ext/src/guice-servlet-4.2.1.jar" />
 	<classpathentry kind="lib" path="ext/annotations-12.0.jar" sourcepath="ext/src/annotations-12.0.jar" />
 	<classpathentry kind="lib" path="ext/log4j-1.2.17.jar" sourcepath="ext/src/log4j-1.2.17.jar" />
 	<classpathentry kind="lib" path="ext/slf4j-api-1.7.13.jar" sourcepath="ext/src/slf4j-api-1.7.13.jar" />
@@ -160,5 +161,10 @@
 	<classpathentry kind="lib" path="ext/byte-buddy-agent-1.8.3.jar" sourcepath="ext/src/byte-buddy-agent-1.8.3.jar" />
 	<classpathentry kind="lib" path="ext/objenesis-2.6.jar" sourcepath="ext/src/objenesis-2.6.jar" />
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER" />
+	<classpathentry kind="src" path="target\generated-sources\annotations">
+		<attributes>
+			<attribute name="optional" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin/classes" />
 </classpath>
