update libraries, sshd

--- a/src/test/config/test-users.conf
+++ b/src/test/config/test-users.conf
@@ -1,3 +1,9 @@
+[user "sampleuser"]
+	password = sampleuser
+	cookie = 0acbd4bec7932e433c568f164b5554dd5e79ceca
+	accountType = LOCAL
+	emailMeOnMyTicketChanges = true
+	role = "#none"
 [user "TicketRefTest"]
 	password = admin
 	displayName = TicketRefTest
