--- a/.classpath
+++ b/.classpath
@@ -30,6 +30,7 @@
 	<classpathentry kind="lib" path="ext/jetty-http-9.3.23.v20180228.jar" sourcepath="ext/src/jetty-http-9.3.23.v20180228.jar" />
 	<classpathentry kind="lib" path="ext/jetty-io-9.3.23.v20180228.jar" sourcepath="ext/src/jetty-io-9.3.23.v20180228.jar" />
 	<classpathentry kind="lib" path="ext/jetty-util-9.3.23.v20180228.jar" sourcepath="ext/src/jetty-util-9.3.23.v20180228.jar" />
+	<classpathentry kind="lib" path="ext/jetty-xml-9.3.23.v20180228.jar" sourcepath="ext/src/jetty-xml-9.3.23.v20180228.jar" />
 	<classpathentry kind="lib" path="ext/jetty-webapp-9.3.23.v20180228.jar" sourcepath="ext/src/jetty-webapp-9.3.23.v20180228.jar" />
 	<classpathentry kind="lib" path="ext/wicket-core-8.1.0.jar" sourcepath="ext/src/wicket-core-8.1.0.jar" />
 	<classpathentry kind="lib" path="ext/hamcrest-junit-2.0.0.0.jar" sourcepath="ext/src/hamcrest-junit-2.0.0.0.jar" />
@@ -122,8 +123,10 @@
 	<classpathentry kind="lib" path="ext/bcprov-jdk15on-1.57.jar" sourcepath="ext/src/bcprov-jdk15on-1.57.jar" />
 	<classpathentry kind="lib" path="ext/bcmail-jdk15on-1.57.jar" sourcepath="ext/src/bcmail-jdk15on-1.57.jar" />
 	<classpathentry kind="lib" path="ext/bcpkix-jdk15on-1.57.jar" sourcepath="ext/src/bcpkix-jdk15on-1.57.jar" />
-	<classpathentry kind="lib" path="ext/sshd-core-1.0.0.jar" sourcepath="ext/src/sshd-core-1.0.0.jar" />
-	<classpathentry kind="lib" path="ext/mina-core-2.0.9.jar" sourcepath="ext/src/mina-core-2.0.9.jar" />
+	<classpathentry kind="lib" path="ext/sshd-core-2.1.0.jar" sourcepath="ext/src/sshd-core-2.1.0.jar" />
+	<classpathentry kind="lib" path="ext/sshd-common-2.1.0.jar" sourcepath="ext/src/sshd-common-2.1.0.jar" />
+	<classpathentry kind="lib" path="ext/sshd-mina-2.1.0.jar" sourcepath="ext/src/sshd-mina-2.1.0.jar" />
+	<classpathentry kind="lib" path="ext/mina-core-2.0.19.jar" sourcepath="ext/src/mina-core-2.0.19.jar" />
 	<classpathentry kind="lib" path="ext/rome-0.9.jar" sourcepath="ext/src/rome-0.9.jar" />
 	<classpathentry kind="lib" path="ext/jdom-1.0.jar" sourcepath="ext/src/jdom-1.0.jar" />
 	<classpathentry kind="lib" path="ext/gson-2.3.1.jar" sourcepath="ext/src/gson-2.3.1.jar" />
